# SUSTech-EE211-Robotic-Perception-and-Intelligence-Laboratory

./: .gitignore  README.md
data/: map.pgm  map.yaml
src/lab06/: package.xml  setup.cfg  setup.py
src/lab06/lab06/: move_square.py  move_square_bkup.py
src/lab08/: package.xml  setup.cfg  setup.py
src/lab08/lab08/: astar.py
src/lab12/grasp/: package.xml  setup.cfg  setup.py
src/lab12/grasp/grasp/: Astar_planner.py  arm_controller.py  arm_controller_causal.py  astar.py  base_controller.py  grasp.py  grasp_causal.py  motion.py  my_controller.py  my_navigator.py  navigator.py  navigator_bkup.py  navigator_casual.py  navigator_casual_random.py  pose_reach.py  tf_reader.py
src/lab12/grasp/grasp/deserted/: base_controller.py  motion.py  navigator_bkup.py  (+2 more)
src/lab12/grasp/launch/: grasp.launch.py  grasp_casual.launch.py  my_grasp.launch.py
src/lab12/grasp_interfaces/: CMakeLists.txt  package.xml
src/lab12/grasp_interfaces/srv/: GraspAction.srv
src/lab12/ros2_aruco/config/: aruco_parameters.yaml
src/lab12/ros2_aruco/launch/: aruco_recognition.launch.py
src/lab12/ros2_aruco/ros2_aruco/: aruco_node.py
src/nav2_my_controller/: CMakeLists.txt  controller_plugin.xml  nav2_my_controller.xml  package.xml
src/nav2_my_controller/include/nav2_my_controller/: DWA_controller.hpp  my_controller.hpp
src/nav2_my_controller/src/: DWA_controller.cpp  my_controller.cpp
src/nav2_my_planner/: CMakeLists.txt  global_planner_plugin.xml  package.xml
src/nav2_my_planner/include/nav2_my_planner/: astar_planner.hpp  astar_planner_bkup.hpp  my_planner.hpp
src/nav2_my_planner/src/: astar_planner.cpp  my_planner.cpp
src/testpkg/: package.xml  setup.cfg  setup.py
src/testpkg/testpkg/: publisher.py
src/testpkgcpp/: CMakeLists.txt  package.xml
src/testpkgcpp/src/: publisher.cpp
(+2 files in other folders)
